Add support for HTTP Auth

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 Changes since 1.1.1:
+* Support for HTTP Auth
+* Category.getAllMembersGen passes the namespace parameter correctly
 * generator queries with an empty result set don't get caught in an infinite loop
 * Added support for AssertEdit
 * Fixed equality checks for user objects
